[tool.poetry]
name = "home-work"
version = "0.1.0"
description = ""
authors = ["admi <nariman.ramazaov@yandex.ru>"]
readme = "README.md"
packages = [{include = "home_work"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
